<!--
  This file is part of radio reddit for Android.

  radio reddit for Android is free software: you can redistribute it and/or
  modify it under the terms of the GNU General Public License as published
  by the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  radio reddit for Android is distributed in the hope that it will be
  useful, but WITHOUT ANY WARRANTY; without even the implied warranty
  of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with radio reddit for Android.
  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">radio reddit</string>

    <string name="menu_tune">tune</string>
    <string name="menu_logout">logout</string>

    <string name="username">reddit username</string>
    <string name="password">reddit password</string>
    <string name="login">login</string>

    <string name="no_username">please enter a username</string>
    <string name="no_password">please enter a password</string>
    <string name="bad_login">incorrect login</string>

    <string name="now_logged_out">you are now logged out</string>
    <string name="already_logged_out">you are already logged out</string>

    <string name="playing_music">radio reddit is playing</string>

    <string name="network_error">please improve your internet connection and try again</string>

    <string name="tune_dialog_title">select a stream</string>
    <string name="info_dialog_title">radio reddit for android</string>

    <string name="info_filler">-</string>

    <string name="info_stream">stream</string>
    <string name="info_title">title</string>
    <string name="info_artist">artist</string>
    <string name="info_genre">genre</string>
    <string name="info_redditor">redditor</string>
    <string name="info_playlist">playlist</string>

    <string name="info_text"><![CDATA[version 0.4<br><br><a href="http://radioreddit.com/?q=sponsor">please donate to radio reddit!</a><br><br>current authors are <a href="mailto:chris.b.blay@gmail.com">christopher blay</a> and <a href="mailto:armakaryk@gmail.com">alexander makaryk</a>. created by <a href="mailto:chris.b.blay@gmail.com">christopher blay</a> and <a href="mailto:danmorwood@gmail.com">daniel morwood</a><br><br>portions of this app are licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">apache 2.0</a>, specifically <a href="http://code.google.com/p/google-gson/">gson</a> and the <a href="http://developer.android.com/resources/samples/ActionBarCompat/index.html">action bar compatibility</a>. nearly everything else is licensed under the <a href="http://www.gnu.org/licenses/gpl.txt">GNU GPL v3</a><br><br>special thanks to the <a href="http://tango.freedesktop.org/">tango project</a>, <a href="http://www.reddit.com/">reddit</a>, and <a href="http://radioreddit.com/">radio reddit</a>]]></string>

    <string name="no_internet">can\'t connect to radio reddit :(</string>
    <string name="not_submitted">this song hasn\'t been submitted to reddit yet</string>

    <string name="now_tuned_to">now tuned to</string>
    <string name="not_logged_in">not logged in</string>
    <string name="now_logged_in_as">now logged in as</string>
    <string name="currently_logged_in_as">currently logged in as</string>

    <string name="play">toggle play</string>
    <string name="save">toggle save</string>
    <string name="upvote">toggle upvote</string>
    <string name="downvote">toggle downvote</string>
    <string name="album_art">album art</string>
    <string name="info">info</string>
    <string name="widget_name_large">Radio Reddit (Large)</string>
    <string name="loading_notification">Loading…</string>
    <string name="widget_name_small">Radio Reddit (Small)</string>
    <string name="no_votes">0</string>
    <string name="menu_login">login</string>
</resources>
