<!--
  This file is part of radio reddit for Android.
 
  radio reddit for Android is free software: you can redistribute it and/or
  modify it under the terms of the GNU General Public License as published
  by the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  radio reddit for Android is distributed in the hope that it will be
  useful, but WITHOUT ANY WARRANTY; without even the implied warranty
  of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with radio reddit for Android.
  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:background="#f00"
        android:textColor="#fff"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/no_internet"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="@dimen/album_art_size"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/upvote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/up_off"
                android:background="@drawable/actionbar_compat_item"
                android:scaleType="center"
                android:contentDescription="@string/upvote" />

            <TextView
                android:id="@+id/votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/novote_grey" />

            <ImageButton
                android:id="@+id/downvote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/down_off"
                android:background="@drawable/actionbar_compat_item"
                android:scaleType="center"
                android:contentDescription="@string/downvote" />

        </LinearLayout>

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="@dimen/album_art_size"
            android:layout_height="@dimen/album_art_size"
            android:src="@drawable/album_art"
            android:scaleType="center"
            android:contentDescription="@string/album_art" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    style="@style/InfoLabel"
                    android:text="@string/info_stream" />

                <TextView
                    android:id="@+id/song_stream"
                    style="@style/InfoValue" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/InfoLabel"
                    android:text="@string/info_title" />

                <TextView
                    android:id="@+id/song_title"
                    style="@style/InfoValue" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/InfoLabel"
                    android:text="@string/info_artist" />

                <TextView
                    android:id="@+id/song_artist"
                    style="@style/InfoValue" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/InfoLabel"
                    android:text="@string/info_genre" />

                <TextView
                    android:id="@+id/song_genre"
                    style="@style/InfoValue" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/InfoLabel"
                    android:text="@string/info_redditor" />

                <TextView
                    android:id="@+id/redditor"
                    style="@style/InfoValue" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/InfoLabel"
                    android:text="@string/info_playlist" />

                <TextView
                    android:id="@+id/playlist"
                    style="@style/InfoValue" />

            </TableRow>

        </TableLayout>

    </ScrollView>

<!--

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0:00" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1:23" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" />

-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_compat_height"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_compat_height"
            android:layout_weight="1"
            android:src="@drawable/star_off"
            android:background="@drawable/actionbar_compat_item"
            android:contentDescription="@string/save" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_compat_height"
            android:layout_weight="1"
            android:src="@drawable/play"
            android:background="@drawable/actionbar_compat_item"
            android:contentDescription="@string/play" />

        <ImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_compat_height"
            android:layout_weight="1"
            android:src="@drawable/info"
            android:background="@drawable/actionbar_compat_item"
            android:contentDescription="@string/info" />

    </LinearLayout>

</LinearLayout>