<!--
  This file is part of radio reddit for Android.
 
  radio reddit for Android is free software: you can redistribute it and/or
  modify it under the terms of the GNU General Public License as published
  by the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  radio reddit for Android is distributed in the hope that it will be
  useful, but WITHOUT ANY WARRANTY; without even the implied warranty
  of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with radio reddit for Android.
  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_large_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background">

    <LinearLayout
        android:id="@+id/widget_large_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/widget_large_toggle_play"
        android:layout_toRightOf="@+id/widget_large_vote_layout"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/widget_large_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <ImageView
                android:id="@+id/widget_large_alien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/widget_large_stream_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/info_stream"
                android:textSize="28dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_large_song_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/widget_large_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:lines="1"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:selectAllOnFocus="true"
                android:text="@string/info_artist"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/widget_large_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:lines="1"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:selectAllOnFocus="true"
                android:text="@string/info_title"
                android:textSize="24dp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/widget_large_toggle_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/play" />

    <LinearLayout
        android:id="@+id/widget_large_vote_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/widget_large_body_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/widget_large_body_layout"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:id="@+id/widget_large_upvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/up_off" />

        <TextView
            android:id="@+id/widget_large_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_votes"
            android:textSize="24dp" />

        <ImageView
            android:id="@+id/widget_large_downvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/down_off" />

    </LinearLayout>

</RelativeLayout>
